# MII_CC_UGR

./: .gitignore  .travis.yml  Basurilla.md  Dockerfile  LICENSE  README.md  cc.yaml  probando.md  pyproject.toml  setup.py  tasks.py
.circleci/: config.yml
.github/workflows/: githubcr.yml  grc.yml  latest.yml  main.yml  test_InCon.yml
doc/: 5Api.md  5ApiHU.md  5Framework.md  5cd.md  5logs.md  alternativasGCR.md  arquitectura.md  ci.md  configuración.md  docker.md  estudioDockerfile.md  explicacionProyecto.md  frameworkTest.md  gestoresTareas.md  herramientasYLenguaje.md  libreriasAserciones.md  sistemaNube.md  test.md
edamam/: ResultadosCoke  api.py  api_edamam.py
ficheros/: unidades_medida.txt
json/: alimentos.json  alimentos_es.json  alimentos_in.json  recetas.json
recetarium/: api.py  configuracion.py  excepciones.py  funciones.py  main.py  recetas.py
recetarium/json/: alimentos_es.json
requirements/: requirements.txt
src/: api.py  basura.md  excepciones.py  funciones.py  recetas.py  test.py
test/: test-api.py  test.py
